# sif-server

./: .gitignore  .gitmodules  Cargo.toml  main.js  package-lock.json  package.json  userdata.db
assets/: multi_unit_scenario_map.json  multi_unit_scenario_open_m.json  normal_live_map.json  priv.pem  scenario_m.json  special_live_map.json
handlers/: account.js  api.js  download.js  global.js  live.js  liveStatus.json  login.js  misc.js  unitStatus.json  user.js
notes/: extract.js
src/: main.rs  router.rs
src/router/: download.rs  gdpr.rs  global.rs  lbonus.json  live.rs  login.rs  main.rs  misc.rs  secretbox.rs  tutorial.rs  unit.rs  user.rs
src/router/main-api/: album.albumAll.result.json  disabled.background.backgroundInfo.result.json  disabled.scenario.scenarioStatus.result.json  disabled.subscenario.subscenarioStatus.result.json  disabled.unit.deckInfo.result.json  disabled.unit.unitAll.result.json  museum.info.result.json  stamp.stampInfo.result.json
static/: card_navi_ids.json  live_goal_reward_map.json  live_setting_map.json
static/main.php-api/: banner.bannerList.result.json  banner.bannerList.result_orig.json  check_unit.js  convert_unitAll_to_map.js  disabled.award.awardInfo.result.json  disabled.live.liveStatus.result.json  disabled.multiunit.multiunitscenarioStatus.result.json  eventscenario.status.result.json  item.list.result.json  live.schedule.result.json  unit.removableSkillInfo.result.json  unit.supporterAll.result.json
static/scenario/: convert_multiunit_story_to_map.js  multi_unit_scenario_m.json  scenario_chapter_m.json
(+10663 files in other folders)
