[package]
name = "llsif"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
lazy_static = "1.4.0"
json = "0.12.4"
base64 = "0.21.5"
actix-web = "4.4.1"
